lab1/Test/L1-A-10-91.output
Error Type A at Line 3
Error Type A at Line 13
Error Type B at Line 28
Error Type B at Line 28
Error Type B at Line 34
Error Type B at Line 41
Error Type B at Line 49
